@@ -1,17 +1,18 @@
-///**
-// * Authored by jayxu @2021
-// */
-//package com.jayxu.playground.experiment;
-//
-//import jdk.incubator.foreign.MemorySegment;
-//import jdk.incubator.foreign.ResourceScope;
-//
-//public class NativeMemDemo {
-//    public static void main(String[] args) {
-//        try (var res = ResourceScope.newConfinedScope();) {
-//            var mem = MemorySegment
-//                .allocateNative(1024, res);
-//            System.out.println(mem.address().toString());
-//        }
-//    }
-//}
+/**
+ * Authored by jayxu @2021
+ */
+package com.jayxu.playground.experiment;
+
+import java.lang.foreign.Arena;
+
+/**
+ * @author jayxu
+ */
+public class NativeMemDemo {
+    void main() {
+        try (var arena = Arena.ofConfined();) {
+            var mem = arena.allocate(1024L);
+            System.out.println(mem.address());
+        }
+    }
+}
